# cone_detection

./: CMakeLists.txt  README.md  package.xml
config/: missions.yaml
include/cone_detection/: cone_classification.hpp  cone_clustering.hpp  cone_type.hpp  filtering_utils.hpp  ground_removal.hpp  mission_config.hpp
include/dbscan/: README.md
include/dbscan/pbbs/: parallel.h
launch/: cone_detection_launch.py  viz-reliable.rviz
old_version/: cone_detection_node_x.cpp
plot/: algo_time.txt  algo_time_10m.txt  plot_algo  plot_algo.cpp  plot_times  plot_times.cpp  timestamp.txt
src/: cone_detection_node.cpp  cone_detection_node_x.cpp
src/utils/: cone_classification.cpp  cone_clustering.cpp  filtering_utils.cpp  ground_removal.cpp
