<?xml version="1.0"?>
<package format="3">
  <name>cone_detection</name>
  <version>0.1.0</version>
  <description>ROS2 package for detecting and classifying traffic cones using Lidar data.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building and running the node -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>Eigen3</depend>
  <depend>eufs_msgs</depend>

  <!-- Build dependencies -->
  <build_depend>visualization_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
